--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+body,
+html {
+  padding: 0;
+  font-family: "Karla", sans-serif;
+}
+h1 {
+  font-size: 2.8rem;
+  margin: 0.3em;
+}
+
+p {
+  margin: 0.3em;
+  font-size: 1.8rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main.container {
+  background-color: #f5f5f5;
+  border-radius: 13px;
+  height: 62vh;
+  width: 35%;
+  /* display: block; */
+  /* align-content: center; */
+  padding: 3em 3em;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dice-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-content: space-around;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 80%;
+}
+
+.dice-wrapper__dice {
+  height: 100px;
+  width: 100px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  color: black;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.dice-wrapper__dice--green {
+  background-color: #59e391;
+}
+
+.dice-wrapper__dice__value {
+  font-size: 3rem;
+}
+
+.dice-roll {
+  display: block;
+  font-size: 1.5rem;
   color: white;
+  background-color: #5035ff;
+  border-radius: 4px;
+  border: 0 solid black;
+  padding: 0.4em 2em;
+  justify-self: center;
+  text-align: center;
+  letter-spacing: 0.1em;
+  cursor: pointer;
+  margin: 0.5em;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dice-roll:active {
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
